--- a/HardwareReservationAndAccountingSystem/Content/sass/components/layout/left-sidebar.scss
+++ b/HardwareReservationAndAccountingSystem/Content/sass/components/layout/left-sidebar.scss
@@ -2,8 +2,8 @@
     background: $colorAlmostWhite;
     box-shadow: 0 0 20px 0 rgba(black, 0.1);
     min-height: 100vh;
-    /*padding: 2em 2.5em;*/
     padding: 0;
+    margin-bottom: 0;
 
     & > div:not(.navbar-links),
     footer {
